fix css and collapsed category

--- a/src/GrapeJs/pages/NavigationPanel/index.css
+++ b/src/GrapeJs/pages/NavigationPanel/index.css
@@ -38,7 +38,7 @@
     height: 35px;
     position: relative;
     margin:0;
-    border: 1px solid #888888;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 #navigationPanelPages .navigtionWrapper:hover{
 
@@ -62,7 +62,7 @@
     z-index: 7;
     border-radius: 5px;
     
-    border: 1px solid #888888;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
     margin-top: 3px;
 
 }
